operationalizing-istio/labs/03/ratings-gw-https-correct-host.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ratings-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "ratings.istioinaction.io"    
    tls:
      mode: SIMPLE
      credentialName: ratings-cert
