operationalizing-istio/labs/03/ratings-delegated-vs-exportto.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ratings-delegated-vs
  namespace: ratings-ns
spec:
  exportTo:
  - istio-ingress
  http:
  - route:
    - destination:
        host: ratings.ratings-ns.svc.cluster.local
