operationalizing-istio/labs/03/recommendation-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: recommendation-vs
  namespace: recommendation-ns
spec:
  hosts:
  - "recommendation.istioinaction.io"
  gateways:
  - istio-ingress/recommendation-gateway
  http:
  - route:
    - destination:
        host: recommendation.recommendation-ns.svc.cluster.local
